[project]
name = "codespaces-quickstart"
version = "0.1.0"
description = ""
authors = [
    {name = "A-clear",email = "kameya@a-style55.co.jp"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<=3.11.12"
dependencies = [
    "rasa-pro (>=3.12.12,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
